# physagentos-reachy-mini-hal

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: demo_agent.py  smoke_test.py  wake.py
src/physagentos_reachy_mini_hal/: __init__.py  connect.py  driver.py  protocol.py  types.py
tests/: test_driver.py
